# TTR

Sistema/sisprel/backend/app/: prestart.sh  pyproject.toml  requirements.txt  test_survey.json
Sistema/sisprel/backend/app/alembic/versions/: 031006e8f61a_primera_revision.py  03ae695d6b94_primera_vesion_estable.py  066d652dab8a_add_iteraciones_para_eliminacion_en_.py  0a752d49152f_delete_expire_at_and_add_active_survey_.py  0d8763b22790_tecera_revision.py  0e4ce952a42b_quit_nullable_false_in_question.py  279807e4c627_add_first_and_last_name_to_user_model.py  2cd37bd3a974_add_question_option_open_with_its_fk.py  3e12bc3e8aec_add_weight_total_at_survey.py  406303b6e85d_add_index_to_title_at_survey.py  47df6d534ca9_solve_reverse_property_in_question.py  4e72578c24bf_add_description_at_survey.py  6046d4bcd198_segunda_revision.py  62db7a49b460_correccion_atributo_answeroption.py  64c4c0d8476c_segunda_revision_de_version_estable.py  67a2a4a9ab4e_add_sisprel_tables.py  721f1d598ff1_add_changes_in_question.py  74a410ceaffa_correcion_atributo_de_aceptación.py  86d6c4fdc25b_add_fk_survey_id_at_question_option_and_.py  8927bf9891fe_crear_tabla_de_aceptación.py  90d6d2351e54_quit_nullable_at_owner_id_from_survey.py  90fec81aae5c_add_on_delete_and_update.py  967e42ef19b2_crear_tabla_de_aceptación.py  9dee2f06cd9c_first_version.py  9f1131fadd24_add_predictions_table.py  a894b6acf902_limit_relation_one_to_one_in_question_.py  b06f65b1c7f8_tercea_revision_de_version_estable.py  (+11 more)
Sistema/sisprel/backend/app/app/: calculo_final.py  ecuaciones.py  pruebas.py  pruebas2.py  utils.py
(+104 files in other folders)
