[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Josué David Hernández Ramírez <justinhernandez054@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
uvicorn = "^0.15.0"
fastapi = "^0.70.0"
python-dateutil = "^2.8.2"
python-multipart = "^0.0.5"
email-validator = "^1.1.3"
requests = "^2.26.0"
celery = "^5.1.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.0.1"
pydantic = "^1.8.2"
emails = "^0.6"
raven = "^6.10.0"
gunicorn = "^20.1.0"
jinja2 = "^3.0.2"
psycopg2-binary = "^2.9.1"
alembic = "^1.7.4"
sqlalchemy = "^1.4.26"
pytest = "^6.2.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
arrow = "^1.2.1"
numpy = "^1.21.4"
[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.9b0"
isort = "^5.9.3"
autoflake = "^1.4"
flake8 = "^4.0.1"
pytest = "^6.2.5"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^3.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 150

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"